syntax="proto3";
package  project;
option go_package="./project/projectpb";
import "google/protobuf/timestamp.proto";

message Booking{
  int64 BookingId=1 ;
  int64 UserId=2;
  int64 TripId =3;
  int64 Fare =4;
  google.protobuf.Timestamp PickupTime=5;
  google.protobuf.Timestamp DropOffTime =6;
  int64 PickupStopId =7;
  int64 DropOffStopId =8;
  string  Status =9;
}
message CreateBookingRequest{
  Booking booking=1;
}
message CreateBookingResponse{
  string Result=1;
}

message ReadBookingRequest{
  int64 booking_id=1;
}
message ReadBookingResponse{
  Booking booking=1;
}
message DeleteBookingRequest{
  int64 booking_id=1;
}
message DeleteBookingResponse{
  string result=1;
}

message UserLogoutRequest{
  int64 User_id=1;
}
message UserLogoutResponse{
  string Result=1;
}

message DriverLogoutRequest{
  int64 User_id=1;
}
message DriverLogoutResponse{
  string Result=1;
}

    rpc Driverlogout(UserLogoutRequest) returns (DriverLogoutResponse){
option (google.api.http)={
post:"/userlogout"
    body:"*"
    };
    };

    rpc Userlogout(UserLogoutRequest) returns (UserLogoutResponse){
option (google.api.http)={
post:"/userlogout"
    body:"*"
    };
    };
